# just-do-test

./: .gitattributes  Dockerfile  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/api/: models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0003_alter_notification_user_delete_user.py
backend/backend/: asgi.py  consumers.py  routing.py  settings.py  urls.py  yasg.py
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/.next/: trace
frontend/.next/server/: _error.js
frontend/.next/server/pages/: _error.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/frontend/static/frontend/: main.js
frontend/pages/: DashboardPage.js  LoginPage.js  _app.js  admin.js  dashboard.js  index.js  login.js
frontend/src/: index.js
frontend/src/components/: AdminDashboard.js  AdminDashboardStats.js  App.js  AuthForm.js  Dashboard.js  LoginForm.js  NotificationList.js  SendMessageForm.js  UserDashboardStats.js
frontend/src/components/layout/: Header.js
frontend/src/pages/: admin-dashboard.js  adminDashboard.js  dashboard.js  userDashboard.js
frontend/src/redux/: actions.js  reducers.js  store.js
frontend/src/redux/reduces/: notificationReducer.js  (+1 more)
frontend/src/server/: client.js  server.js
frontend/src/utils/: api.js  socket.js
frontend/templates/: index.html
nginx/: nginx.conf
(+3 files in other folders)
